Update submodule configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "(TF - 15% ... + 5% + 5% )-- GoAhead Project Final Presentation; configured lastly for EC2 AWS + endpoints (WIP)"]
-	path = "(TF - 15% ... + 5% + 5% )-- GoAhead Project Final Presentation; configured lastly for EC2 AWS + endpoints (WIP)"
-	url = https://github.com/aleeeec02/goahead-ultimate
+[submodule "(TF - 15% ... + 5% + 5% )-- App GoAhead Project React + JavaScript + EC2 + WIP endpoints with postresql + other endpoints (WIP)"]
+    path = (TF - 15% ... + 5% + 5% )-- App GoAhead Project React + JavaScript + EC2 + WIP endpoints with postresql + other endpoints (WIP)
+    url = https://github.com/aleeeec02/goahead-ultimate
+
